--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.TrueFragment">
 
-    <TextView
-        android:visibility="gone"
+    <Button
+        android:text="AS"
         android:id="@+id/textViewShowItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,8 +18,7 @@
         android:textSize="36sp"
         android:textColor="#ff0000"
         android:gravity="center"
-        android:background="@color/black"
-        tools:text ="Добрый вечер. дамы и господа, оавфв ку"/>
+        android:background="@color/black"/>
     <ProgressBar
         android:id="@+id/progressbar"
         android:layout_width="match_parent"
@@ -29,10 +28,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <ListView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
